cluster/apps/external-apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-apps
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
