cluster/apps/external-apps/casaos-ingress.yaml
---
# yamllint disable rule:line-length
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casa-os
  namespace: external-apps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-analytics"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.${SECRET_DOMAIN}/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${SECRET_DOMAIN}/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
spec:
  ingressClassName: nginx
  rules:
    - host: 192.168.1.20
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: casa-os
                port:
                  number: 99
  tls:
    - hosts:
        - 192.168.1.20
      secretName: casa-os-tls
